--- a/B-EQUIPOS.html
+++ b/B-EQUIPOS.html
@@ -143,6 +143,16 @@
     </div>
 </div></div></div>
 
+ 
+ <div class="col-sm"><div class="card">
+    <a href="#"><img src="./IMG/2.EQUIPOS/EQUIPO (36)/IMG_8550-1.JPG" class="card-img-top" alt="..."></a><div class="card-body">
+    <p class="card-text">PISTON 330</p>
+    <p>CATERPILLAR </p>
+    <div>
+    <a href="./B-MODELO-36-1.html" class="btn btn-outline-success">INFORMACION</a>
+    </div>
+</div></div></div>
+ 
 
 </div></br>
 
