--- a/D-HERRAMIENTAS.html
+++ b/D-HERRAMIENTAS.html
@@ -96,6 +96,14 @@
 
 
 
+
+
+
+</div></br>
+
+<div class="row">
+ 
+ 
 <div class="col-sm"><div class="card">
     <a href="#"><img src="./IMG/4.HERRAMIENTAS/EQUIPO (40)/EXT-01.JPG" class="card-img-top" alt="..."></a><div class="card-body">
     <p class="card-text">EXTINTORES</p>
@@ -107,10 +115,6 @@
 
 
 </div></br>
-
-
-
-
 
 <!----------------------------------------------------CONTAINER----------------------------------------------------------->        
 </div><br />
