--- a/D-HERRAMIENTAS.html
+++ b/D-HERRAMIENTAS.html
@@ -107,7 +107,7 @@
 <div class="col-sm"><div class="card">
     <a href="#"><img src="./IMG/4.HERRAMIENTAS/EQUIPO (40)/EXT-01.JPG" class="card-img-top" alt="..."></a><div class="card-body">
     <p class="card-text">EXTINTORES</p>
-    <p>CONTRAINCENDIO </br>VARIAS</p>
+    <p>CONTRAINCENDIO</p>
     <div>
     <a href="./D-MODELO-EXTINTORES.html" class="btn btn-outline-success">INFORMACION</a>
     </div>
