--- a/D-HERRAMIENTAS.html
+++ b/D-HERRAMIENTAS.html
@@ -109,7 +109,7 @@
     <p class="card-text">EXTINTORES</p>
     <p>CONTRAINCENDIO</p>
     <div>
-    <a href="./D-MODELO-EXTINTORES.html" class="btn btn-outline-success">INFORMACION</a>
+    <a href="./D-MODELO-43-44.html" class="btn btn-outline-success">INFORMACION</a>
     </div>
 </div></div></div>
 
