--- a/B-EQUIPOS.html
+++ b/B-EQUIPOS.html
@@ -82,6 +82,15 @@
     <a href="./B-MODELO-11.html" class="btn btn-outline-success">INFORMACION</a>
     </div>
 </div></div></div>
+ 
+ <div class="col-sm"><div class="card">
+    <a href="#"><img src="./IMG/2.EQUIPOS/EXCAVADORAS/EQUIPO (41)/IMG (1).JPEG" class="card-img-top" alt="..."></a><div class="card-body">
+    <p class="card-text">EXCAVADORA</p>
+    <p>EXCAVADORA CATERPILAR</p>
+    <div>
+    <a href="./B-MODELO-41.html" class="btn btn-outline-success">INFORMACION</a>
+    </div>
+</div></div></div>
 
 </div></br>
 
