--- a/E-AUTOMOVILES.html
+++ b/E-AUTOMOVILES.html
@@ -68,7 +68,7 @@
  <div class="col-sm"><div class="card">
     <a href="#"><img src="./IMG/5.AUTOMOVILES/EQUIPO (42)/1.JPEG" class="card-img-top" alt="..."></a><div class="card-body">
     <p class="card-text">CAMIONETA</p>
-    <p>FORD 1997</p>
+    <p>FORD 1997 <br> RANGER</p>
     <div>
     <a href="./E-MODELO-42.html" class="btn btn-outline-success">INFORMACION</a>
     </div>
