--- a/B-EQUIPOS.html
+++ b/B-EQUIPOS.html
@@ -117,6 +117,15 @@
     <a href="./B-MODELO-12.html" class="btn btn-outline-success">INFORMACION</a>
     </div>
 </div></div></div>
+ 
+  <div class="col-sm"><div class="card">
+    <a href="#"><img src="./IMG/2.EQUIPOS/CARGADORES/EQUIPO (13)/1.JPEG" class="card-img-top" alt="..."></a><div class="card-body">
+    <p class="card-text">CARGADOR</p>
+    <p>CATERPILLAR <br>(PALA)</p>
+    <div>
+    <a href="./B-MODELO-13.html" class="btn btn-outline-success">INFORMACION</a>
+    </div>
+</div></div></div>
 
 <div class="col-sm"><div class="card">
     <a href="#"><img src="./IMG/2.EQUIPOS/CARGADORES/EQUIPO (15)/IMG_8440.JPG" class="card-img-top" alt="..."></a><div class="card-body">
