--- a/I-TERRENOS.html
+++ b/I-TERRENOS.html
@@ -52,7 +52,7 @@
 <div class="container">
 <!----------------------------------------------------CONTAINER----------------------------------------------------------->
 
-<br><h5 class="top">CAMIONES EN VENTA</h5> <br/><br>
+<br><h5 class="top">TERRENOS EN VENTA</h5> <br/><br>
 
 <div class="row">
 
