--- a/index.html
+++ b/index.html
@@ -78,6 +78,21 @@
 
 
 
+ <h5 class="top">TERRENOS EN VENTA</h5> <br/>
+<div class="container">
+ 
+ 
+ <div class="row">
+
+<div class="col-sm"><div class="card">
+    <a href="./I-TERRENOS.html"><img src="./IMG/TERRENOS/1.JPEG" class="card-img-top" alt="..."></a><div class="card-body">
+    <p class="card-text">TERRENOS</p>
+</div></div></div>
+
+</div></br>
+ 
+ </div><br />
+ 
 <!------------------------------------------------------------------------------------------------------------------------>
 <h5 class="top">EQUIPOS EN VENTA</h5> <br/>
 <div class="container">
@@ -85,6 +100,7 @@
 
 
 
+ 
 <div class="row">
 
 <div class="col-sm"><div class="card">
