--- a/I-TERRENO-1.html
+++ b/I-TERRENO-1.html
@@ -76,12 +76,12 @@
       <div class="column-xs-12 column-md-5">
         <h1>Terreno rustico baldio </h1>
 
-        <h2>Frente a km. 124.9 de la carretera federal 57 tramo allende Nva. Rosita de la Col. Ganadera Venustiano Carranza.</h2>
+        
         
         <div class="description">
-          <p>TAMAÑO: 25,265 Km² <br>
-            DIRECCION: Frente a km. 124.9 de la carretera federal 57 tramo allende Nva. Rosita de la Col. Ganadera Venustiano Carranza.<br>
-             CIUDAD: Sabinas, Coah.</p>
+          <p>TAMAÑO:<br> 25,265 Km² <br>
+            DIRECCION:<br> Frente a km. 124.9 de la carretera federal 57 tramo allende Nva. Rosita de la Col. Ganadera Venustiano Carranza.<br>
+             CIUDAD:<br> Sabinas, Coah.</p>
 
         </div>
         <p>Para mas informacion favor de<br> comunicarse al</p>
