--- a/I-TERRENO-1.html
+++ b/I-TERRENO-1.html
@@ -79,7 +79,7 @@
      
         
         <div class="description">
-          <p>TAMAÑO:<br> 25,265 Km² <br>
+          <p>TAMAÑO:<br> 25,265 m² <br>
 
 <br>
             DIRECCION:<br> Frente a km. 124.9 de la carretera federal 57 tramo allende Nva. Rosita de la Col. Ganadera Venustiano Carranza.<br>
