--- a/I-TERRENO-2.html
+++ b/I-TERRENO-2.html
@@ -79,7 +79,7 @@
      
         
         <div class="description">
-          <p>TAMAÑO:<br> 20,800 Km² <br>
+          <p>TAMAÑO:<br> 20,800 m² <br>
 
 <br>
             DIRECCION:<br> Frente a camino a Polvorin Mexatim y a carretera carretera federal 57  en la col. Nueva. Rosita, de la Col. Ganadera Venustiano Carranza.<br>
