--- a/I-TERRENO-4.html
+++ b/I-TERRENO-4.html
@@ -79,7 +79,7 @@
      
         
         <div class="description">
-          <p>TAMAÑO:<br> 22,854.41 Km² <br>
+          <p>TAMAÑO:<br> 22,854.41 m² <br>
 
 <br>
             DIRECCION:<br> Frente a calle Nicolas Bravo al noroeste de la ciudad en la Col. Prolongacion Fundadores.<br>
