--- a/I-TERRENO-5.html
+++ b/I-TERRENO-5.html
@@ -79,7 +79,7 @@
      
         
         <div class="description">
-          <p>TAMAÑO:<br> 22,854.56 Km² <br>
+          <p>TAMAÑO:<br> 22,854.56 m² <br>
 
 <br>Frente a calle Libramiento Cuauhtemoc al noroeste de la ciudad en la Col. Prolongacion FundadoresFrente a km. 124.9 de la carretera federal 57 tramo allende Nva. Rosita de la Col. Ganadera Venustiano Carranza.<br>
 
