--- a/I-TERRENO-6.html
+++ b/I-TERRENO-6.html
@@ -79,7 +79,7 @@
      
         
         <div class="description">
-          <p>TAMAÑO:<br> 3,968.719 Km² <br>
+          <p>TAMAÑO:<br> 3,968.719 m² <br>
 
 <br>
             DIRECCION:<br> Frente a calle Libramiento Cuauhtemoc al noroeste de la ciudad en la Col. Prolongacion Fundadores.<br>
