--- a/I-TERRENO-7.html
+++ b/I-TERRENO-7.html
@@ -79,7 +79,7 @@
      
         
         <div class="description">
-          <p>TAMAÑO:<br> 7,392.5 Km² <br>
+          <p>TAMAÑO:<br> 7,392.5 m² <br>
 
 <br>
             DIRECCION:<br> Frente a las calles Gpe. Victoria,Felix Ramos y AvenidasDesiderio Garcia y Jesus Ma. Ramos; Col. Prolongacion Fundadores.<br>
